# Flopio

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CmakeLists.txt  Flopio.sln  LICENSE  README.md
Debug/: Flopio.ilk
Flopio/: Flopio.vcxproj  Flopio.vcxproj.filters  imgui.ini  lastestLog.txt
Flopio/Debug/: vc141.idb
Flopio/Debug/Flopio.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Flopio.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Flopio/EngineResources/: TextureRC.fs  TextureRC.vs
Flopio/Resources/: fragment.fs  ship.xml  vertex.vs
Flopio/src/: Main.cpp
Flopio/src/core/: App.h  DelayProcess.h  Engine.cpp  Engine.h  IApp.h  IProcess.h  Logger.cpp  Logger.h  Process.h  ProcessManager.cpp  ProcessManager.h  glad.c  utils.cpp  utils.h
Flopio/src/core/gamebasis/: Actor.cpp  Actor.h  ActorFactory.cpp  ActorFactory.h  App.h  Component.h  DelayProcess.h  EventManager.cpp  EventManager.h  PhysicsComponent.cpp  PhysicsComponent.h  Process.h  ProcessManager.cpp  ProcessManager.h  RectangleRenderComponent.cpp  RectangleRenderComponent.h  RenderComponent.cpp  RenderComponent.h  Scene.cpp  Scene.h
Flopio/src/core/gamebasis/events/: MouseEventData.h  WindowResizeEventData.h
Flopio/src/core/gamebasis/viewports/: ScreenViewport.cpp  ScreenViewport.h  Viewport.h
Flopio/src/core/graphics/: RenderComponent.cpp  Scene.cpp  Scene.h
Flopio/src/core/graphics/rendercomps/: CustomShaderTextureRC.cpp  CustomShaderTextureRC.h  TextureRC.cpp  TextureRC.h
Flopio/src/core/graphics/viewports/: ScreenViewport.cpp  ScreenViewport.h  Viewport.h
Flopio/src/core/math/: linearmath.h  prng.c  prng.h
Flopio/src/core/memory/: allocator.c  allocator.h  linearAlloc.c  linearAlloc.h  memutils.h  poolAlloc.c  poolAlloc.h  queueAlloc.c  queueAlloc.h  stackAlloc.c  stackAlloc.h
Flopio/src/core/resourse/: Resource.cpp  Resource.h  ResourceCache.cpp  ResourceCache.h  ResourceFile.h  ResourceHandle.cpp  ResourceHandle.h  ResourceLoader.h
Flopio/src/core/resourse/files/: DirectoryResourceFile.cpp  DirectoryResourceFile.h
Flopio/src/core/resourse/loaders/: DefaultResourceLoader.cpp  DefaultResourceLoader.h  FragmentShaderResourceLoader.cpp  FragmentShaderResourceLoader.h  TextureResourceLoader.cpp  TextureResourceLoader.h  VertexShaderResourceLoader.cpp  VertexShaderResourceLoader.h  XmlResourceLoader.cpp  XmlResourceLoader.h
Flopio/src/core/utils/: Benchmark.h  HashedString.hpp  utils.cpp  utils.h
Flopio/src/game/: App.h  Flopio.cpp  Flopio.h
Flopio/src/math/: prng.c
libs/include/glad/: glad.h
