cmake_minimum_required(VERSION 3.12)
project(Flopio CXX C)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(flopio
	"Flopio/src/core/Engine.cpp"
	"Flopio/src/core/gamebasis/Actor.cpp"
	"Flopio/src/core/gamebasis/ActorFactory.cpp"
	"Flopio/src/core/gamebasis/PhysicsComponent.cpp"
	"Flopio/src/core/gamebasis/ProcessManager.cpp"
	"Flopio/src/core/gamebasis/EventManager.cpp"
	"Flopio/src/core/graphics/RenderComponent.cpp"
	"Flopio/src/core/graphics/rendercomps/CustomShaderTextureRC.cpp"
	"Flopio/src/core/graphics/rendercomps/TextureRC.cpp"
	"Flopio/src/core/graphics/Scene.cpp"
	"Flopio/src/core/graphics/viewports/ScreenViewport.cpp"
	"Flopio/src/core/Logger.cpp"
	"Flopio/src/core/math/prng.c"
	"Flopio/src/core/memory/allocator.c"
	"Flopio/src/core/memory/linearAlloc.c"
	"Flopio/src/core/memory/poolAlloc.c"
	"Flopio/src/core/memory/stackAlloc.c"
	"Flopio/src/core/memory/queueAlloc.c"
	"Flopio/src/core/resourse/files/DirectoryResourceFile.cpp"
	"Flopio/src/core/resourse/loaders/FragmentShaderResourceLoader.cpp"
	"Flopio/src/core/resourse/loaders/TextureResourceLoader.cpp"
	"Flopio/src/core/resourse/loaders/VertexShaderResourceLoader.cpp"
	"Flopio/src/core/resourse/loaders/XmlResourceLoader.cpp"
	"Flopio/src/core/resourse/Resource.cpp"
	"Flopio/src/core/resourse/ResourceCache.cpp"
	"Flopio/src/core/resourse/ResourceHandle.cpp"
	"Flopio/src/core/utils.cpp"
	"Flopio/src/game/Flopio.cpp"
	"Flopio/src/Main.cpp"
	"libs/include/Box2D/Collision/b2BroadPhase.cpp"
	"libs/include/Box2D/Collision/b2CollideCircle.cpp"
	"libs/include/Box2D/Collision/b2CollideEdge.cpp"
	"libs/include/Box2D/Collision/b2CollidePolygon.cpp"
	"libs/include/Box2D/Collision/b2Collision.cpp"
	"libs/include/Box2D/Collision/b2Distance.cpp"
	"libs/include/Box2D/Collision/b2DynamicTree.cpp"
	"libs/include/Box2D/Collision/b2TimeOfImpact.cpp"
	"libs/include/Box2D/Collision/Shapes/b2ChainShape.cpp"
	"libs/include/Box2D/Collision/Shapes/b2CircleShape.cpp"
	"libs/include/Box2D/Collision/Shapes/b2EdgeShape.cpp"
	"libs/include/Box2D/Collision/Shapes/b2PolygonShape.cpp"
	"libs/include/Box2D/Common/b2BlockAllocator.cpp"
	"libs/include/Box2D/Common/b2Draw.cpp"
	"libs/include/Box2D/Common/b2Math.cpp"
	"libs/include/Box2D/Common/b2Settings.cpp"
	"libs/include/Box2D/Common/b2StackAllocator.cpp"
	"libs/include/Box2D/Common/b2Timer.cpp"
	"libs/include/Box2D/Dynamics/b2Body.cpp"
	"libs/include/Box2D/Dynamics/b2ContactManager.cpp"
	"libs/include/Box2D/Dynamics/b2Fixture.cpp"
	"libs/include/Box2D/Dynamics/b2Island.cpp"
	"libs/include/Box2D/Dynamics/b2World.cpp"
	"libs/include/Box2D/Dynamics/b2WorldCallbacks.cpp"
	"libs/include/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.cpp"
	"libs/include/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.cpp"
	"libs/include/Box2D/Dynamics/Contacts/b2CircleContact.cpp"
	"libs/include/Box2D/Dynamics/Contacts/b2Contact.cpp"
	"libs/include/Box2D/Dynamics/Contacts/b2ContactSolver.cpp"
	"libs/include/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.cpp"
	"libs/include/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp"
	"libs/include/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.cpp"
	"libs/include/Box2D/Dynamics/Contacts/b2PolygonContact.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2DistanceJoint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2FrictionJoint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2GearJoint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2Joint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2MotorJoint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2MouseJoint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2PrismaticJoint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2PulleyJoint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2RevoluteJoint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2RopeJoint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2WeldJoint.cpp"
	"libs/include/Box2D/Dynamics/Joints/b2WheelJoint.cpp"
	"libs/include/Box2D/Rope/b2Rope.cpp"
	"libs/include/imgui/imgui.cpp"
	"libs/include/imgui/imgui_demo.cpp"
	"libs/include/imgui/imgui_draw.cpp"
	"libs/include/imgui/imgui_impl_glfw.cpp"
	"libs/include/imgui/imgui_impl_opengl3.cpp"
	"libs/include/imgui/imgui_widgets.cpp"
	"libs/lib/glad.c"
	"libs/lib/tinyxml2.cpp"

	"Flopio/src/core/Engine.h"
	"Flopio/src/core/gamebasis/Actor.h"
	"Flopio/src/core/gamebasis/ActorFactory.h"
	"Flopio/src/core/gamebasis/App.h"
	"Flopio/src/core/gamebasis/DelayProcess.h"
	"Flopio/src/core/gamebasis/PhysicsComponent.h"
	"Flopio/src/core/gamebasis/Process.h"
	"Flopio/src/core/gamebasis/ProcessManager.h"
	"Flopio/src/core/gamebasis/EventManager.h"
	"Flopio/src/core/graphics/rendercomps/CustomShaderTextureRC.h"
	"Flopio/src/core/graphics/rendercomps/TextureRC.h"
	"Flopio/src/core/graphics/Scene.h"
	"Flopio/src/core/graphics/viewports/ScreenViewport.h"
	"Flopio/src/core/graphics/viewports/Viewport.h"
	"Flopio/src/core/Logger.h"
	"Flopio/src/core/math/linearmath.h"
	"Flopio/src/core/math/prng.h"
	"Flopio/src/core/memory/allocator.h"
	"Flopio/src/core/memory/linearAlloc.h"
	"Flopio/src/core/memory/memutils.h"
	"Flopio/src/core/memory/poolAlloc.h"
	"Flopio/src/core/memory/stackAlloc.h"
	"Flopio/src/core/memory/queueAlloc.h"
	"Flopio/src/core/resourse/files/DirectoryResourceFile.h"
	"Flopio/src/core/resourse/loaders/DefaultResourceLoader.h"
	"Flopio/src/core/resourse/loaders/FragmentShaderResourceLoader.h"
	"Flopio/src/core/resourse/loaders/TextureResourceLoader.h"
	"Flopio/src/core/resourse/loaders/VertexShaderResourceLoader.h"
	"Flopio/src/core/resourse/loaders/XmlResourceLoader.h"
	"Flopio/src/core/resourse/Resource.h"
	"Flopio/src/core/resourse/ResourceCache.h"
	"Flopio/src/core/resourse/ResourceFile.h"
	"Flopio/src/core/resourse/ResourceHandle.h"
	"Flopio/src/core/resourse/ResourceLoader.h"
	"Flopio/src/core/utils.h"
	"Flopio/src/game/Flopio.h"
	"libs/include/Box2D/Box2D.h"
	"libs/include/Box2D/Collision/b2BroadPhase.h"
	"libs/include/Box2D/Collision/b2Collision.h"
	"libs/include/Box2D/Collision/b2Distance.h"
	"libs/include/Box2D/Collision/b2DynamicTree.h"
	"libs/include/Box2D/Collision/b2TimeOfImpact.h"
	"libs/include/Box2D/Collision/Shapes/b2ChainShape.h"
	"libs/include/Box2D/Collision/Shapes/b2CircleShape.h"
	"libs/include/Box2D/Collision/Shapes/b2EdgeShape.h"
	"libs/include/Box2D/Collision/Shapes/b2PolygonShape.h"
	"libs/include/Box2D/Collision/Shapes/b2Shape.h"
	"libs/include/Box2D/Common/b2BlockAllocator.h"
	"libs/include/Box2D/Common/b2Draw.h"
	"libs/include/Box2D/Common/b2GrowableStack.h"
	"libs/include/Box2D/Common/b2Math.h"
	"libs/include/Box2D/Common/b2Settings.h"
	"libs/include/Box2D/Common/b2StackAllocator.h"
	"libs/include/Box2D/Common/b2Timer.h"
	"libs/include/Box2D/Dynamics/b2Body.h"
	"libs/include/Box2D/Dynamics/b2ContactManager.h"
	"libs/include/Box2D/Dynamics/b2Fixture.h"
	"libs/include/Box2D/Dynamics/b2Island.h"
	"libs/include/Box2D/Dynamics/b2TimeStep.h"
	"libs/include/Box2D/Dynamics/b2World.h"
	"libs/include/Box2D/Dynamics/b2WorldCallbacks.h"
	"libs/include/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.h"
	"libs/include/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.h"
	"libs/include/Box2D/Dynamics/Contacts/b2CircleContact.h"
	"libs/include/Box2D/Dynamics/Contacts/b2Contact.h"
	"libs/include/Box2D/Dynamics/Contacts/b2ContactSolver.h"
	"libs/include/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.h"
	"libs/include/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.h"
	"libs/include/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.h"
	"libs/include/Box2D/Dynamics/Contacts/b2PolygonContact.h"
	"libs/include/Box2D/Dynamics/Joints/b2DistanceJoint.h"
	"libs/include/Box2D/Dynamics/Joints/b2FrictionJoint.h"
	"libs/include/Box2D/Dynamics/Joints/b2GearJoint.h"
	"libs/include/Box2D/Dynamics/Joints/b2Joint.h"
	"libs/include/Box2D/Dynamics/Joints/b2MotorJoint.h"
	"libs/include/Box2D/Dynamics/Joints/b2MouseJoint.h"
	"libs/include/Box2D/Dynamics/Joints/b2PrismaticJoint.h"
	"libs/include/Box2D/Dynamics/Joints/b2PulleyJoint.h"
	"libs/include/Box2D/Dynamics/Joints/b2RevoluteJoint.h"
	"libs/include/Box2D/Dynamics/Joints/b2RopeJoint.h"
	"libs/include/Box2D/Dynamics/Joints/b2WeldJoint.h"
	"libs/include/Box2D/Dynamics/Joints/b2WheelJoint.h"
	"libs/include/Box2D/Rope/b2Rope.h"
	"libs/include/glad/glad.h"
	"libs/include/GLFW/glfw3.h"
	"libs/include/GLFW/glfw3native.h"
	"libs/include/imgui/imconfig.h"
	"libs/include/imgui/imgui.h"
	"libs/include/imgui/imgui_impl_glfw.h"
	"libs/include/imgui/imgui_impl_opengl3.h"
	"libs/include/imgui/imgui_internal.h"
	"libs/include/imgui/imstb_rectpack.h"
	"libs/include/imgui/imstb_textedit.h"
	"libs/include/imgui/imstb_truetype.h"
	"libs/include/KHR/khrplatform.h"
	"libs/include/stb_image.h"
	"libs/include/tinyxml2.h"
)

find_package(OpenGL REQUIRED)
target_include_directories(flopio PUBLIC
	${OPENGL_INCLUDE_DIRS}
	"libs/include"
)
SET(GLFW_BUILD_DOCS OFF CACHE BOOL "Build the GLFW documentation" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Build the GLFW example programs" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "Build the GLFW test programs" FORCE)
SET(GLFW_INSTALL OFF CACHE BOOL "Generate installation target" FORCE)
add_subdirectory("libs/lib/glfw")

target_link_libraries(flopio glfw
	${GLFW_LIBRARIES}
	${OPENGL_LIBRARIES}
)
if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
	target_link_libraries(flopio stdc++fs)
endif()

file(COPY Flopio/Resources DESTINATION .)
file(COPY Flopio/EngineResources DESTINATION .)
