cmake_minimum_required(VERSION 3.12)
project(Flopio CXX C)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
add_definitions(-DIMGUI_IMPL_OPENGL_LOADER_GLAD)
add_executable(flopio
	"Flopio/src/core/Engine.cpp"
	"Flopio/src/core/gamebasis/Actor.cpp"
	"Flopio/src/core/gamebasis/ActorFactory.cpp"
	"Flopio/src/core/gamebasis/PhysicsComponent.cpp"
	"Flopio/src/core/gamebasis/ProcessManager.cpp"
	"Flopio/src/core/gamebasis/EventManager.cpp"
	"Flopio/src/core/graphics/RenderComponent.cpp"
	"Flopio/src/core/graphics/rendercomps/CustomShaderTextureRC.cpp"
	"Flopio/src/core/graphics/rendercomps/TextureRC.cpp"
	"Flopio/src/core/graphics/Scene.cpp"
	"Flopio/src/core/graphics/viewports/ScreenViewport.cpp"
	"Flopio/src/core/utils/Logger.cpp"
	"Flopio/src/core/math/prng.c"
	"Flopio/src/core/memory/allocator.c"
	"Flopio/src/core/memory/linearAlloc.c"
	"Flopio/src/core/memory/poolAlloc.c"
	"Flopio/src/core/memory/stackAlloc.c"
	"Flopio/src/core/memory/queueAlloc.c"
	"Flopio/src/core/resourse/files/DirectoryResourceFile.cpp"
	"Flopio/src/core/resourse/loaders/FragmentShaderResourceLoader.cpp"
	"Flopio/src/core/resourse/loaders/TextureResourceLoader.cpp"
	"Flopio/src/core/resourse/loaders/VertexShaderResourceLoader.cpp"
	"Flopio/src/core/resourse/loaders/XmlResourceLoader.cpp"
	"Flopio/src/core/resourse/Resource.cpp"
	"Flopio/src/core/resourse/ResourceCache.cpp"
	"Flopio/src/core/resourse/ResourceHandle.cpp"
	"Flopio/src/core/utils/utils.cpp"
	"Flopio/src/game/Flopio.cpp"
	"Flopio/src/Main.cpp"
	"Dependencies/Box2D/Box2D/Collision/b2BroadPhase.cpp"
	"Dependencies/Box2D/Box2D/Collision/b2CollideCircle.cpp"
	"Dependencies/Box2D/Box2D/Collision/b2CollideEdge.cpp"
	"Dependencies/Box2D/Box2D/Collision/b2CollidePolygon.cpp"
	"Dependencies/Box2D/Box2D/Collision/b2Collision.cpp"
	"Dependencies/Box2D/Box2D/Collision/b2Distance.cpp"
	"Dependencies/Box2D/Box2D/Collision/b2DynamicTree.cpp"
	"Dependencies/Box2D/Box2D/Collision/b2TimeOfImpact.cpp"
	"Dependencies/Box2D/Box2D/Collision/Shapes/b2ChainShape.cpp"
	"Dependencies/Box2D/Box2D/Collision/Shapes/b2CircleShape.cpp"
	"Dependencies/Box2D/Box2D/Collision/Shapes/b2EdgeShape.cpp"
	"Dependencies/Box2D/Box2D/Collision/Shapes/b2PolygonShape.cpp"
	"Dependencies/Box2D/Box2D/Common/b2BlockAllocator.cpp"
	"Dependencies/Box2D/Box2D/Common/b2Draw.cpp"
	"Dependencies/Box2D/Box2D/Common/b2Math.cpp"
	"Dependencies/Box2D/Box2D/Common/b2Settings.cpp"
	"Dependencies/Box2D/Box2D/Common/b2StackAllocator.cpp"
	"Dependencies/Box2D/Box2D/Common/b2Timer.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/b2Body.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/b2ContactManager.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/b2Fixture.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/b2Island.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/b2World.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/b2WorldCallbacks.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2CircleContact.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2Contact.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2ContactSolver.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2PolygonContact.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2DistanceJoint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2FrictionJoint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2GearJoint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2Joint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2MotorJoint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2MouseJoint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2PrismaticJoint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2PulleyJoint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2RevoluteJoint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2RopeJoint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2WeldJoint.cpp"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2WheelJoint.cpp"
	"Dependencies/Box2D/Box2D/Rope/b2Rope.cpp"
	"Dependencies/imgui/imgui.cpp"
	"Dependencies/imgui/imgui_demo.cpp"
	"Dependencies/imgui/imgui_draw.cpp"
	"Dependencies/imgui/examples/imgui_impl_glfw.cpp"
	"Dependencies/imgui/examples/imgui_impl_opengl2.cpp"
	"Dependencies/imgui/imgui_widgets.cpp"
	"Dependencies/tinyxml2/tinyxml2.cpp"

	"Flopio/src/core/Engine.h"
	"Flopio/src/core/gamebasis/Actor.h"
	"Flopio/src/core/gamebasis/ActorFactory.h"
	"Flopio/src/core/gamebasis/App.h"
	"Flopio/src/core/gamebasis/DelayProcess.h"
	"Flopio/src/core/gamebasis/events/MouseEventData.h"
	"Flopio/src/core/gamebasis/events/WindowResizeEventData.h"
	"Flopio/src/core/gamebasis/PhysicsComponent.h"
	"Flopio/src/core/gamebasis/Process.h"
	"Flopio/src/core/gamebasis/ProcessManager.h"
	"Flopio/src/core/gamebasis/EventManager.h"
	"Flopio/src/core/graphics/rendercomps/CustomShaderTextureRC.h"
	"Flopio/src/core/graphics/rendercomps/TextureRC.h"
	"Flopio/src/core/graphics/Scene.h"
	"Flopio/src/core/graphics/viewports/ScreenViewport.h"
	"Flopio/src/core/graphics/viewports/Viewport.h"
	"Flopio/src/core/utils/Logger.h"
	"Flopio/src/core/math/linearmath.h"
	"Flopio/src/core/math/prng.h"
	"Flopio/src/core/memory/allocator.h"
	"Flopio/src/core/memory/linearAlloc.h"
	"Flopio/src/core/memory/memutils.h"
	"Flopio/src/core/memory/poolAlloc.h"
	"Flopio/src/core/memory/stackAlloc.h"
	"Flopio/src/core/memory/queueAlloc.h"
	"Flopio/src/core/resourse/files/DirectoryResourceFile.h"
	"Flopio/src/core/resourse/loaders/DefaultResourceLoader.h"
	"Flopio/src/core/resourse/loaders/FragmentShaderResourceLoader.h"
	"Flopio/src/core/resourse/loaders/TextureResourceLoader.h"
	"Flopio/src/core/resourse/loaders/VertexShaderResourceLoader.h"
	"Flopio/src/core/resourse/loaders/XmlResourceLoader.h"
	"Flopio/src/core/resourse/Resource.h"
	"Flopio/src/core/resourse/ResourceCache.h"
	"Flopio/src/core/resourse/ResourceFile.h"
	"Flopio/src/core/resourse/ResourceHandle.h"
	"Flopio/src/core/resourse/ResourceLoader.h"
	"Flopio/src/core/utils/utils.h"
  "Flopio/src/core/utils/Benchmark.h"
	"Flopio/src/game/Flopio.h"
	"Dependencies/Box2D/Box2D/Box2D.h"
	"Dependencies/Box2D/Box2D/Collision/b2BroadPhase.h"
	"Dependencies/Box2D/Box2D/Collision/b2Collision.h"
	"Dependencies/Box2D/Box2D/Collision/b2Distance.h"
	"Dependencies/Box2D/Box2D/Collision/b2DynamicTree.h"
	"Dependencies/Box2D/Box2D/Collision/b2TimeOfImpact.h"
	"Dependencies/Box2D/Box2D/Collision/Shapes/b2ChainShape.h"
	"Dependencies/Box2D/Box2D/Collision/Shapes/b2CircleShape.h"
	"Dependencies/Box2D/Box2D/Collision/Shapes/b2EdgeShape.h"
	"Dependencies/Box2D/Box2D/Collision/Shapes/b2PolygonShape.h"
	"Dependencies/Box2D/Box2D/Collision/Shapes/b2Shape.h"
	"Dependencies/Box2D/Box2D/Common/b2BlockAllocator.h"
	"Dependencies/Box2D/Box2D/Common/b2Draw.h"
	"Dependencies/Box2D/Box2D/Common/b2GrowableStack.h"
	"Dependencies/Box2D/Box2D/Common/b2Math.h"
	"Dependencies/Box2D/Box2D/Common/b2Settings.h"
	"Dependencies/Box2D/Box2D/Common/b2StackAllocator.h"
	"Dependencies/Box2D/Box2D/Common/b2Timer.h"
	"Dependencies/Box2D/Box2D/Dynamics/b2Body.h"
	"Dependencies/Box2D/Box2D/Dynamics/b2ContactManager.h"
	"Dependencies/Box2D/Box2D/Dynamics/b2Fixture.h"
	"Dependencies/Box2D/Box2D/Dynamics/b2Island.h"
	"Dependencies/Box2D/Box2D/Dynamics/b2TimeStep.h"
	"Dependencies/Box2D/Box2D/Dynamics/b2World.h"
	"Dependencies/Box2D/Box2D/Dynamics/b2WorldCallbacks.h"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2ChainAndCircleContact.h"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2ChainAndPolygonContact.h"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2CircleContact.h"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2Contact.h"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2ContactSolver.h"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2EdgeAndCircleContact.h"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2EdgeAndPolygonContact.h"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2PolygonAndCircleContact.h"
	"Dependencies/Box2D/Box2D/Dynamics/Contacts/b2PolygonContact.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2DistanceJoint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2FrictionJoint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2GearJoint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2Joint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2MotorJoint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2MouseJoint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2PrismaticJoint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2PulleyJoint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2RevoluteJoint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2RopeJoint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2WeldJoint.h"
	"Dependencies/Box2D/Box2D/Dynamics/Joints/b2WheelJoint.h"
	"Dependencies/Box2D/Box2D/Rope/b2Rope.h"
	"Dependencies/glfw/include/GLFW/glfw3.h"
	"Dependencies/glfw/include/GLFW/glfw3native.h"
	"Dependencies/imgui/imconfig.h"
	"Dependencies/imgui/imgui.h"
	"Dependencies/imgui/examples/imgui_impl_glfw.h"
	"Dependencies/imgui/examples/imgui_impl_opengl2.h"
	"Dependencies/imgui/imgui_internal.h"
	"Dependencies/imgui/imstb_rectpack.h"
	"Dependencies/imgui/imstb_textedit.h"
	"Dependencies/imgui/imstb_truetype.h"
	"Dependencies/stb/stb_image.h"
	"Dependencies/tinyxml2/tinyxml2.h"
)

SET(GLAD_PROFILE "core" CACHE STRING "OpenGL profile" FORCE)
SET(GLAD_API "gl=2.0" CACHE STRING "API type/version pairs, like \"gl=3.2,gles=\", no version means latest" FORCE) 
SET(GLAD_EXTENSIONS "GL_ARB_bindless_texture" CACHE STRING "Path to extensions file or comma separated list of extensions, if missing all extensions are included" FORCE)
add_subdirectory("Dependencies/glad")

find_package(OpenGL REQUIRED)
target_include_directories(flopio PUBLIC
	${OPENGL_INCLUDE_DIRS}
	${GLAD_INCLUDE_DIRS}
	"Dependencies/Box2D"
	"Dependencies/tinyxml2"
	"Dependencies/stb"
	"Dependencies/imgui"
	"Dependencies"
)
SET(GLFW_BUILD_DOCS OFF CACHE BOOL "Build the GLFW documentation" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "Build the GLFW example programs" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "Build the GLFW test programs" FORCE)
SET(GLFW_INSTALL OFF CACHE BOOL "Generate installation target" FORCE)
add_subdirectory("Dependencies/glfw")

target_link_libraries(flopio glfw
	${GLFW_LIBRARIES}
	${OPENGL_LIBRARIES}
	${GLAD_LIBRARIES}
)
if (CMAKE_CXX_COMPILER_ID MATCHES "Clang|GNU")
	target_link_libraries(flopio stdc++fs)
endif()

file(COPY Flopio/Resources DESTINATION .)
file(COPY Flopio/EngineResources DESTINATION .)
